# Flux

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
src/engine/: CMakeLists.txt  Exports.cpp  Exports.h
src/engine/Color/: ColorLUTConverter.cpp  ColorLUTConverter.h  Colors.cpp  Colors.h  Converter.cpp  Converter.h  FluxColorMath.h  Test.cpp  Test.h
src/engine/Core/: FluxImageProcessor.cpp  FluxImageProcessor.h  FluxWaveletDenoising.cpp  FluxWaveletDenoising.h  WaveletImage.cpp  WaveletImage.h
src/engine/Core/Filters/: BoxBlur.cpp  BoxBlur.h
src/engine/Core/ImageOperations/: BaseImageOperation.h
src/engine/Core/ImageOperations/Implementations/: CropImageOperation.cpp  CropImageOperation.h  DenoiseImageOperation.cpp  DenoiseImageOperation.h  DetailsImageOperation.cpp  DetailsImageOperation.h  InputImageOperation.cpp  InputImageOperation.h  LutImageOperation.cpp  LutImageOperation.h  ResizeImageOperation.cpp  ResizeImageOperation.h  WaveletComposeImageOperation.cpp  WaveletComposeImageOperation.h  WaveletDecomposeImageOperation.cpp  WaveletDecomposeImageOperation.h
src/engine/Core/Wavelets/: Daubechies4.cpp  Daubechies4.h
src/engine/Pipeline/: FluxPipeline.h
src/engine/infrastructure/: BenchmarkHelper.h  BitmapHelper.cpp  BitmapHelper.h  FLXDefines.h  FluxMath.h  InteropTypes.cpp  InteropTypes.h  LUT.cpp  LUT.h  LUTf3d.cpp  LUTf3d.h  Matrix.cpp  Matrix.h  MemoryUtils.cpp  MemoryUtils.h  PixelsHelper.cpp  PixelsHelper.h
src/engine/io/: ImageDecoder.cpp  ImageDecoder.h  ImageInput.cpp  ImageInput.h  JpegImageDecoder.cpp  JpegImageDecoder.h  RawImageDecoder.cpp  RawImageDecoder.h
src/engine/io/Encoders/: ImageEncoder.cpp  ImageEncoder.h  JpegImageEncoder.cpp  JpegImageEncoder.h
src/testapp/: CMakeLists.txt  Flux.cpp  Flux.h
